# mission-control

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  MORNING-CHECKLIST.md  OVERNIGHT-FIX.md  README.md  docker-compose.dev.yml  docker-compose.yml  docs  verify-modules.js
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 23fc0ed9f1c9_merge_heads_before_skills.py  2788da5d5c5c_alter_mc_activity_widen_for_activity_.py  731ce699267c_add_logging_columns_to_agent_runs.py  942b3f740909_create_agent_runs_table.py  a1b2c3d4e5f6_add_docs_column_to_mc_projects.py  a1b2c3d4e5f6_create_skills_index_tables.py  b4f1e2a3c5d6_add_type_column_to_mc_tasks.py  c5e2f3a4b6d7_add_proof_column_to_mc_tasks.py  cb0c373e0912_add_docs_column_to_mc_projects.py  d6f3a4b5c7e8_add_claim_columns_to_mc_tasks.py  ddde276426d8_alter_mc_tasks_add_warroom_columns.py  fac85843c830_create_mc_projects_table.py
backend/core/: auth.py  cloudflare_auth.py  config.py  constants.py  database.py  logging_config.py  models.py  rate_limit.py  registry.py  request_logging.py  security_headers.py  websocket.py
backend/scripts/: mission_control.py
backend/tests/: conftest.py  test_activity.py  test_agents.py  test_calendar.py  test_chat.py  test_content.py  test_cron.py  test_health.py  test_indexer.py  test_memory.py  test_office.py  test_overview.py  test_projects.py  test_request_logging.py  test_runs.py  test_school.py  test_skills.py  test_tasks.py  test_warroom.py  test_workspace.py
frontend/: README.md  (+6 more)
(+208 files in other folders)
